cmake_minimum_required(VERSION 3.26)
project(ContenedoresDinamicos)

set(CMAKE_CXX_STANDARD 14)

add_executable(ContenedoresDinamicos
        main.cpp
)
add_executable( ejercicio1 "ejercicio1.cpp")
add_executable( ejercicio2 "ejercicio2.cpp")
add_executable( ejercicio3 "ejercicio3.cpp")
add_executable( ejercicio4 "ejercicio4.cpp")
add_executable( ejercicio5 "ejercicio5.cpp")
add_executable( ejercicio6 "ejercicio6.cpp")

